--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
 <title>This is my web-page</title>
+     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div id="header">
